fix: prevent navbar dropdown from being covered by posts

--- a/themes/vivia/source/css/_partial/header.styl
+++ b/themes/vivia/source/css/_partial/header.styl
@@ -1,5 +1,7 @@
 :root
   #nav
+    position: relative
+    z-index: 10
     height: 72px
     @media mq-mobile
       height: auto
